# CensorLess

./: ARTIFACT-APPENDIX.md  README.md
censorless-ng/: .gitignore  Cargo.toml  README.md  client.toml  flake.nix  genkey.sh  selenium-test.py  server.tf  server.toml  stress-test.sh  stress-urls.txt
censorless-ng/client/: Cargo.toml
censorless-ng/client/src/: main.rs
censorless-ng/lambda/: .gitignore  Cargo.toml
censorless-ng/lambda/src/: main.rs
censorless-ng/protocol/: Cargo.toml
censorless-ng/protocol/src/: address.rs  crypto.rs  lib.rs  message.rs
censorless-ng/server/src/: main.rs
censorless-private/: deploy-all.sh  deploy.sh  module.nix  server-configuration.nix  server.tf  server.toml
censorless-private/client/: Cargo.toml
censorless-private/client/src/: main.rs
censorless-private/docs/: DESIGN.md
censorless-private/protocol/src/: address.rs  message.rs
censorless-private/server/: Cargo.toml
censorless-vanilla/controller/: Dockerfile  README.md  requirements.txt
censorless-vanilla/controller/controller/assignments/migrations/: 0002_idclientcounter_and_more.py  (+1 more)
censorless-vanilla/controller/controller/misc/: sample-request.py
censorless-vanilla/function-refresher/: api.py  environment.yml  input-args.json  rejuvenation.py  remove-unused-ips.py
censorless-vanilla/function-refresher/misc/: input-args.json
censorless-vanilla/local-proxy/: README.md
censorless-vanilla/serverless-bridge/: README.md  index-no-stream.js  index.js  package.json
controller/controller/assignments/: models.py  serializers.py  views.py
controller/controller/assignments/migrations/: 0001_initial.py
controller/controller/scripts/: run_simulation.py  simulation_utils.py
eval/: pcap_capture_use_cases.py
eval/censored_domains/: 50_well_known_blocked_domains.txt  blocked_domains.txt  health_check.sh  health_check_v2.sh  results_private.csv  results_vanilla.csv
lambda-docker/: Dockerfile  README.md  index-no-stream.js  index-wo-AM.js  index.js
lambda-manager/: api.py  input-args.json  nuke.py  rejuvenation.py  response.json
lambda-manager/misc/logs/: instance-exp1-1fleet-batch-count-0.txt
