[workspace]
members = [
    "protocol",
    "client",
    "server",
    "lambda",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "net", "io-util"] }
# HTTP/Lambda
reqwest = { version = "0.12.22", default-features = false, features = ["http2", "rustls-tls-webpki-roots", "brotli", "deflate", "gzip", "stream", "zstd"] }
lambda_http = "0.16.0"
# SOCKS
socks5-server = "0.10.1"
# Cryptography
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
ed25519-dalek = "2.2.0"
rand = "0.9.2"
# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
toml = { version = "0.9.8", default-features = false, features = ["parse", "std", "serde"] }
# Utilities
clap = { version = "4.5", features = ["cargo", "derive"] }
hex = "0.4.3"
thiserror = "2.0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
zstd = "0.13"
